delete account and some updates to other endpoints
